--- a/1 sign in/style.css
+++ b/1 sign in/style.css
@@ -10,12 +10,17 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: url('img.jpg') no-repeat;
+    background: url("img4.jpg")no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .wrapper {
     width: 420px;
-    background: purple;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
@@ -51,12 +56,11 @@ body {
 
 .input-box i {
     position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
+    right: 50px;
+    top: 50;
+    /* transform: translateY(-50%); */
+    font-size: 20px;   
 }
-
 .wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
