--- a/User login/style.css
+++ b/User login/style.css
@@ -10,7 +10,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("img4.jpg")no-repeat;
+    /* background: url("img4.jpg")no-repeat; */
+    /* background: url("health.jpg")no-repeat; */
+    background: url("no.5.jpg")no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -21,7 +23,7 @@ body {
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color: #fff;
+    color: #eeeef5;
     border-radius: 10px;
     padding: 30px 40px;
 }
