--- a/Doctor login/style.css
+++ b/Doctor login/style.css
@@ -10,12 +10,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* background: url("img4.jpg")no-repeat; */
-    /* background: url("health.jpg")no-repeat; */
-    /* background: url("no.5.jpg")no-repeat;
+    background: url("health.jpg")no-repeat;
     background-size: cover;
-    background-position: center; */
-    background: #333;
+    background-position: center;
 }
 
 .wrapper {
@@ -40,6 +37,10 @@ body {
     margin: 30px 0;
 }
 
+.input-box {
+    position: relative;
+}
+
 .input-box input{
     width: 100%;
     height: 100%;
@@ -59,11 +60,12 @@ body {
 
 .input-box i {
     position: absolute;
-    right: 50px;
-    top: 50;
-    /* transform: translateY(-50%); */
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 20px;   
 }
+
 .wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
