--- a/User login/style.css
+++ b/User login/style.css
@@ -39,6 +39,10 @@ body {
     margin: 30px 0;
 }
 
+.input-box {
+    position: relative;
+}
+
 .input-box input{
     width: 100%;
     height: 100%;
@@ -58,9 +62,9 @@ body {
 
 .input-box i {
     position: absolute;
-    right: 50px;
-    top: 50;
-    /* transform: translateY(-50%); */
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 20px;   
 }
 .wrapper .remember-forgot {
