--- a/Main/style.css
+++ b/Main/style.css
@@ -1,4 +1,23 @@
+
+*{
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
+
+
 .navbar {
-    background-color: aqua;
+    background-color: #A4ADF4;
+    /* font-weight: 400; */
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
