--- a/Main/style.css
+++ b/Main/style.css
@@ -73,8 +73,25 @@ nav li:first-child {
   width: 100%;
 }
 
+.menu-button{
+  display: none;
+}
 /* #list {
   height: 26px;
   width: ;
 } */
 
+@media(max-width: 800px){
+  .hideOnMobile{
+    display: none;
+  }
+  .menu-button{
+    display: block;
+  }
+}
+
+@media(max-width: 400px){
+  .sidebar{
+    width: 100%;
+  }
+}
