--- a/Main/style.css
+++ b/Main/style.css
@@ -9,7 +9,7 @@
 
 body {
   min-height: 100vh;
-  /* background-image: ; */
+  background-image:url(no.5.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
