--- a/Main/style.css
+++ b/Main/style.css
@@ -9,7 +9,7 @@
 
 body {
   min-height: 100vh;
-  background-image:url(no.5.jpg);
+  /* background-image:url(no.5.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -95,3 +95,34 @@ nav li:first-child {
     width: 100%;
   }
 }
+
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(to right, #00093c, #2d0b00);
+  color: #fff;
+  padding: 100px 0 30px;
+  /* border-top-left-radius: 125px; */
+  font-size: 13px;
+  line-height: 20px;
+}
+
+.row {
+  width: 85%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.col {
+  flex-basis: 25%;
+  padding: 10px;
+}
+.logo {
+  width: 80px;
+  margin-bottom: 30px;
+}
+
