--- a/Main/style.css
+++ b/Main/style.css
@@ -121,6 +121,11 @@ footer {
   flex-basis: 25%;
   padding: 10px;
 }
+
+.col:nth-child(2), .col:nth-child(3) {
+  flex-basis: 15%;
+}
+
 .logo {
   width: 80px;
   margin-bottom: 30px;
@@ -143,8 +148,55 @@ ul li {
   margin-bottom: 12px;
 }
 
-ul li a {
+.links {
   text-decoration: none;
   color: #fff;
+}
+
+form {
+  padding-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 50px;
+}
+
+form .fa-regular {
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+form input {
+  width: 100%;
+  background: transparent;
+  color: #ccc;
+  border: 0;
+  outline: none;
+}
+
+form .button-press {
+  background: transparent;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+}
+
+form .button-press .fa-solid {
+  font-size: 16px;
+  color: #ccc;
+}
+
+.social-icons .fa-brands {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  color: #000;
+  background-color: #fff;
+  margin-right: 15px;
+  cursor: pointer;
 }
 
