--- a/Main/style.css
+++ b/Main/style.css
@@ -96,6 +96,7 @@ nav li:first-child {
   }
 }
 
+
 footer {
   width: 100%;
   position: absolute;
@@ -103,7 +104,7 @@ footer {
   background: linear-gradient(to right, #00093c, #2d0b00);
   color: #fff;
   padding: 100px 0 30px;
-  /* border-top-left-radius: 125px; */
+  border-top-left-radius: 125px;
   font-size: 13px;
   line-height: 20px;
 }
@@ -200,3 +201,56 @@ form .button-press .fa-solid {
   cursor: pointer;
 }
 
+hr {
+  width: 90%;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  margin: 20px auto;
+}
+
+.copyright {
+  text-align: center;
+}
+
+.underline {
+  width: 100%;
+  height: 5px;
+  background: #767676;
+  border-radius: 3px;
+  position: absolute;
+  top: 25px;
+  left: 0;
+  overflow: hidden;
+}
+
+.underline span {
+  width: 15px;
+  height: 100%;
+  background: #fff;
+  border-radius: 3px;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  animation: moving 2s linear infinite;
+}
+
+@keyframes moving {
+  0% {
+    left: -20px;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  footer {
+    bottom: unset;
+  }
+  .col {
+    flex-basis: 100%;
+  }
+  .col:nth-child(2), .col:nth-child(3) {
+    flex-basis: 100%;
+  }
+}
