--- a/Main/style.css
+++ b/Main/style.css
@@ -15,6 +15,11 @@ body {
   background-position: center;
 }
 
+.main-logo {
+  height: 65px;
+  padding-top: 10px;
+}
+
 nav {
   background-color: white;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
